CB-22264: Introduce allowMajorOsUpgrade parameter for FreeIpa upgrade to enable the upgrade for different OS
This commit contains the following changes:
- Introduce FreeIpaImageFilterSettings class to encapsulate all the upgrade required parameters
- Added allowMajorOsUpgrade parameter to FreeIpaUpgradeRequest
- Added allowMajorOsUpgrade request parameter to FreeIpaUpgradeV1Endpoint.getFreeIpaUpgradeOptions